# new_bot

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  goal.md  pyproject.toml  research_prompt.md
brain/: HEAD
configs/: context_budget.yaml  default.yaml  evaluation.yaml  inference.yaml  models.yaml
diagnostics/: brain_compile_report.json  brain_compile_report.md  brain_record_store_report.json  brain_record_store_report.md  bundle_import_report.json  bundle_import_report.md  bundle_inspection_report.json  bundle_inspection_report.md  bundle_smoke_report.json  bundle_smoke_report.md  migration_report.json  migration_report.md  production_readiness_report.json  production_readiness_report.md  record_coverage_report.json  record_coverage_report.md  training_export_report.json  training_export_report.md
docs/: README.md  codex_goal_news_lab_brain_upgrade.md  phase.md  research_prompt.md  session_prompt.md  todo.md  설명서.md  추론.md  추론2.md
predictions/: 2026-06-24.json
reports/: 2026-06-24_postmortem.json  2026-06-24_preopen.md  20260624_nslab_episode_bundle.md
schemas/: blind_prediction.schema.json  brain_manifest.schema.json  candidate.schema.json  candidate_expansion_review.schema.json  candidate_verification_review.schema.json  company_memory.schema.json  context_manifest.schema.json  daily_analysis.schema.json  event_ticker_edge.schema.json  final_synthesis_context.schema.json  mechanism_memory.schema.json  memory_claim.schema.json  news_novelty_review.schema.json  open_world_first_analysis.schema.json  postmortem.schema.json  (+4 more)
(+526 files in other folders)
